# grace-mar

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BOOTSTRAP-URL.txt  COG-EM-BOOTSTRAP.md  COMPANION-SELF-BOOTSTRAP.md  CONTRIBUTING.md  Dockerfile  GRACE-MAR-BOOTSTRAP.md  LICENSE  LICENSE-RECORD  README.md  USER.md  agents.md  bootstrap-url.txt  companion-self-bootstrap.md  contributing.md  docker-compose.transcripts.yml  docker-compose.yml  gate-review-app.py  grace-mar-abby-prp.txt  grace-mar-bootstrap.md  grace-mar-llm.txt  grace-mar.code-workspace  how-instances-consume-upgrades.md  index.html  instance-contract.json  lanes.yaml  license-record  metrics-dashboard.py  miniapp_server.py  mkdocs.yml  procfile  pyproject.toml  readme.md  render.yaml  requirements-dev.txt  requirements.txt  runtime_config.example.json  (+3 more)
.github/: pull_request_template.md
_template/: DOMAIN.md  README.md
apps/: gate-review-app.py  metrics-dashboard.py  miniapp_server.py
artifacts/: README.md  example-context-output.md  gate-approval-2026-05-02-candidates-0042-0049.json  gate-board.md  gate-board.md.derived-rationale.json  governance-posture.md  governance-posture.md.derived-rationale.json  library-index.md  library-index.md.derived-rationale.json  mcp-authority-report.md  mcp-capability-report.md  mcp-receipt-report.md  mcp-risk-report.json  mcp-risk-report.md  prp  review-dashboard.md  review-dashboard.md.derived-rationale.json  work-dev-compound-dashboard.md  work-dev-compound-gate-candidates.md  work-dev-compound-refresh.md  work-lanes-dashboard.json  work-lanes-dashboard.json.derived-rationale.json  work_dev_dashboard.json  work_dev_dashboard.md
auto-research/: README.md
bootstrap/: companion-self-bootstrap.md  grace-mar-bootstrap.md  work-jiang-bootstrap.md
bot/: .env.example  WECHAT-SETUP.md  avatar_controller.py  bot.py  chat_store.py  conflict_check.py  conflict_rules.yaml  constitutional_layer.py  core.py  lookup_cmc.py  prompt.py  prompt_compressed.py  requirements.txt  retriever.py  wechat-setup.md  wechat_bot.py
bridges/: bridge-schema.json
coaches/: index.html
(+4705 files in other folders)
