[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grace-mar"
version = "0.1.0"
description = "Grace-Mar cognitive fork — Record, Voice, and pipeline tooling"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
# Mirrors root requirements.txt / bot stack for miniapp + Telegram; install with:
#   pip install -e ".[miniapp]"
miniapp = [
  "flask>=3.0",
  "openai>=1.0",
  "python-dotenv>=1.0",
  "python-telegram-bot>=21.0",
]
reflect = [
  "openai>=1.0",
]
# Channel video listing + caption download for operator research (not Voice / not Record).
youtube-research = [
  "yt-dlp>=2024.1",
  "youtube-transcript-api>=0.6.2",
]

[project.scripts]
grace-mar = "grace_mar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
